// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page Header Standardised Background image - renders correctly 1`] = `
<jest>
  <div
    class="ecl-page-header ecl-page-header--image"
  >
    <div
      class="ecl-page-header-expandable"
      data-ecl-auto-init="PageHeaderExpandable"
    >
      <div
        class="ecl-page-header-expandable__header"
        data-ecl-page-header-expandable-header=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-page-header-expandable__header-text"
            style="--ecl-page-header-expandable-separator: '–'"
          >
            <span
              class="ecl-page-header-expandable__title"
            >
              political advertisement
            </span>
            <span
              class="ecl-page-header-expandable__description"
            >
              The sponsor is Business Name
            </span>
            <span
              class="ecl-page-header-expandable__more"
            >
              More info:
            </span>
            <a
              class="ecl-link ecl-link--icon ecl-page-header-expandable__more-link"
              data-ecl-page-header-expandable-header-link=""
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                webpage link
              </span>
              <span
                aria-hidden="false"
                class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
              />
            </a>
          </div>
          <button
            aria-controls="page-header-expandable-panel-demo"
            aria-expanded="false"
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-page-header-expandable__toggle ecl-button--icon-only"
            data-ecl-page-header-expandable-toggle=""
            data-test-custom-toggle-attribute=""
            type="submit"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                expandable button
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--m ecl-icon--flip-vertical ecl-button__icon ecl-icon--corner-arrow"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="ecl-page-header-expandable__panel"
        hidden=""
        id="page-header-expandable-panel-demo"
      >
        <div
          class="ecl-container"
        >
          <ul
            class="ecl-list-illustration ecl-list-illustration--icon-list ecl-page-header-expandable__list "
          >
            <li
              class="ecl-list-illustration__item"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The sponsor is controlled by [either (a) business name of the legal entity or (b) name and surname of the natural person])
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ecl-list-illustration__item  ecl-list-illustration__item--is-last"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The advertisement is linked to [title and date of the election(s)] or [name of the legislative or regulatory initiative])
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <picture
      class="ecl-picture ecl-page-header__picture-background"
    >
      <img
        alt="Europe flag"
        class="ecl-page-header__background"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
    </picture>
    <div
      class="ecl-container ecl-page-header__container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Parent Page label
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            Current Page Label
          </li>
        </ol>
      </nav>
      <h1
        class="ecl-page-header__title"
      >
        Consectetur adipiscing elit
      </h1>
      <div
        class="ecl-page-header__description-container"
      >
        <picture
          class="ecl-picture ecl-page-header__picture-thumbnail"
        >
          <img
            alt="Europe flag"
            class="ecl-page-header__description-thumbnail"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, 
          <a
            class="ecl-link"
            href="/example"
          >
            eget dictum elit
          </a>
          . Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
      <ul
        class="ecl-page-header__meta"
      >
        <li
          class="ecl-page-header__meta-item"
        >
          News article
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          10 March 2025
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--location ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--location"
          />
          Brussels
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--clock ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--clock"
          />
          1 minute read
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          Research Center
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default - renders correctly 1`] = `
<jest>
  <div
    class="ecl-page-header"
  >
    <div
      class="ecl-page-header-expandable"
      data-ecl-auto-init="PageHeaderExpandable"
    >
      <div
        class="ecl-page-header-expandable__header"
        data-ecl-page-header-expandable-header=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-page-header-expandable__header-text"
            style="--ecl-page-header-expandable-separator: '–'"
          >
            <span
              class="ecl-page-header-expandable__title"
            >
              political advertisement
            </span>
            <span
              class="ecl-page-header-expandable__description"
            >
              The sponsor is Business Name
            </span>
            <span
              class="ecl-page-header-expandable__more"
            >
              More info:
            </span>
            <a
              class="ecl-link ecl-link--icon ecl-page-header-expandable__more-link"
              data-ecl-page-header-expandable-header-link=""
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                webpage link
              </span>
              <span
                aria-hidden="false"
                class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
              />
            </a>
          </div>
          <button
            aria-controls="page-header-expandable-panel-demo"
            aria-expanded="false"
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-page-header-expandable__toggle ecl-button--icon-only"
            data-ecl-page-header-expandable-toggle=""
            data-test-custom-toggle-attribute=""
            type="submit"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                expandable button
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--m ecl-icon--flip-vertical ecl-button__icon ecl-icon--corner-arrow"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="ecl-page-header-expandable__panel"
        hidden=""
        id="page-header-expandable-panel-demo"
      >
        <div
          class="ecl-container"
        >
          <ul
            class="ecl-list-illustration ecl-list-illustration--icon-list ecl-page-header-expandable__list "
          >
            <li
              class="ecl-list-illustration__item"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The sponsor is controlled by [either (a) business name of the legal entity or (b) name and surname of the natural person])
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ecl-list-illustration__item  ecl-list-illustration__item--is-last"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The advertisement is linked to [title and date of the election(s)] or [name of the legislative or regulatory initiative])
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-container ecl-page-header__container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Parent Page label
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            Current Page Label
          </li>
        </ol>
      </nav>
      <h1
        class="ecl-page-header__title"
      >
        Consectetur adipiscing elit
      </h1>
      <div
        class="ecl-page-header__description-container"
      >
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, 
          <a
            class="ecl-link"
            href="/example"
          >
            eget dictum elit
          </a>
          . Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
      <ul
        class="ecl-page-header__meta"
      >
        <li
          class="ecl-page-header__meta-item"
        >
          News article
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          10 March 2025
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--location ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--location"
          />
          Brussels
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--clock ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--clock"
          />
          1 minute read
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          Research Center
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default renders correctly when title is hidden and no meta is provided 1`] = `
<jest>
  <div
    class="ecl-page-header"
  >
    <div
      class="ecl-page-header-expandable"
      data-ecl-auto-init="PageHeaderExpandable"
    >
      <div
        class="ecl-page-header-expandable__header"
        data-ecl-page-header-expandable-header=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-page-header-expandable__header-text"
            style="--ecl-page-header-expandable-separator: '–'"
          >
            <span
              class="ecl-page-header-expandable__title"
            >
              political advertisement
            </span>
            <span
              class="ecl-page-header-expandable__description"
            >
              The sponsor is Business Name
            </span>
            <span
              class="ecl-page-header-expandable__more"
            >
              More info:
            </span>
            <a
              class="ecl-link ecl-link--icon ecl-page-header-expandable__more-link"
              data-ecl-page-header-expandable-header-link=""
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                webpage link
              </span>
              <span
                aria-hidden="false"
                class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
              />
            </a>
          </div>
          <button
            aria-controls="page-header-expandable-panel-demo"
            aria-expanded="false"
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-page-header-expandable__toggle ecl-button--icon-only"
            data-ecl-page-header-expandable-toggle=""
            data-test-custom-toggle-attribute=""
            type="submit"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                expandable button
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--m ecl-icon--flip-vertical ecl-button__icon ecl-icon--corner-arrow"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="ecl-page-header-expandable__panel"
        hidden=""
        id="page-header-expandable-panel-demo"
      >
        <div
          class="ecl-container"
        >
          <ul
            class="ecl-list-illustration ecl-list-illustration--icon-list ecl-page-header-expandable__list "
          >
            <li
              class="ecl-list-illustration__item"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The sponsor is controlled by [either (a) business name of the legal entity or (b) name and surname of the natural person])
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ecl-list-illustration__item  ecl-list-illustration__item--is-last"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The advertisement is linked to [title and date of the election(s)] or [name of the legislative or regulatory initiative])
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-container ecl-page-header__container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Parent Page label
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            Current Page Label
          </li>
        </ol>
      </nav>
      <h1
        class="ecl-page-header__title ecl-page-header__title--hidden"
      >
        Consectetur adipiscing elit
      </h1>
      <div
        class="ecl-page-header__description-container"
      >
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, 
          <a
            class="ecl-link"
            href="/example"
          >
            eget dictum elit
          </a>
          . Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-page-header"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-page-header-expandable"
      data-ecl-auto-init="PageHeaderExpandable"
    >
      <div
        class="ecl-page-header-expandable__header"
        data-ecl-page-header-expandable-header=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-page-header-expandable__header-text"
            style="--ecl-page-header-expandable-separator: '–'"
          >
            <span
              class="ecl-page-header-expandable__title"
            >
              political advertisement
            </span>
            <span
              class="ecl-page-header-expandable__description"
            >
              The sponsor is Business Name
            </span>
            <span
              class="ecl-page-header-expandable__more"
            >
              More info:
            </span>
            <a
              class="ecl-link ecl-link--icon ecl-page-header-expandable__more-link"
              data-ecl-page-header-expandable-header-link=""
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                webpage link
              </span>
              <span
                aria-hidden="false"
                class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
              />
            </a>
          </div>
          <button
            aria-controls="page-header-expandable-panel-demo"
            aria-expanded="false"
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-page-header-expandable__toggle ecl-button--icon-only"
            data-ecl-page-header-expandable-toggle=""
            data-test-custom-toggle-attribute=""
            type="submit"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                expandable button
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--m ecl-icon--flip-vertical ecl-button__icon ecl-icon--corner-arrow"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="ecl-page-header-expandable__panel"
        hidden=""
        id="page-header-expandable-panel-demo"
      >
        <div
          class="ecl-container"
        >
          <ul
            class="ecl-list-illustration ecl-list-illustration--icon-list ecl-page-header-expandable__list "
          >
            <li
              class="ecl-list-illustration__item"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The sponsor is controlled by [either (a) business name of the legal entity or (b) name and surname of the natural person])
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ecl-list-illustration__item  ecl-list-illustration__item--is-last"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The advertisement is linked to [title and date of the election(s)] or [name of the legislative or regulatory initiative])
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-container ecl-page-header__container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Parent Page label
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            Current Page Label
          </li>
        </ol>
      </nav>
      <h1
        class="ecl-page-header__title"
      >
        Consectetur adipiscing elit
      </h1>
      <div
        class="ecl-page-header__description-container"
      >
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, 
          <a
            class="ecl-link"
            href="/example"
          >
            eget dictum elit
          </a>
          . Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
      <ul
        class="ecl-page-header__meta"
      >
        <li
          class="ecl-page-header__meta-item"
        >
          News article
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          10 March 2025
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--location ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--location"
          />
          Brussels
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--clock ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--clock"
          />
          1 minute read
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          Research Center
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-page-header custom-class custom-class--test"
  >
    <div
      class="ecl-page-header-expandable"
      data-ecl-auto-init="PageHeaderExpandable"
    >
      <div
        class="ecl-page-header-expandable__header"
        data-ecl-page-header-expandable-header=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-page-header-expandable__header-text"
            style="--ecl-page-header-expandable-separator: '–'"
          >
            <span
              class="ecl-page-header-expandable__title"
            >
              political advertisement
            </span>
            <span
              class="ecl-page-header-expandable__description"
            >
              The sponsor is Business Name
            </span>
            <span
              class="ecl-page-header-expandable__more"
            >
              More info:
            </span>
            <a
              class="ecl-link ecl-link--icon ecl-page-header-expandable__more-link"
              data-ecl-page-header-expandable-header-link=""
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                webpage link
              </span>
              <span
                aria-hidden="false"
                class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
              />
            </a>
          </div>
          <button
            aria-controls="page-header-expandable-panel-demo"
            aria-expanded="false"
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-page-header-expandable__toggle ecl-button--icon-only"
            data-ecl-page-header-expandable-toggle=""
            data-test-custom-toggle-attribute=""
            type="submit"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                expandable button
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--m ecl-icon--flip-vertical ecl-button__icon ecl-icon--corner-arrow"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="ecl-page-header-expandable__panel"
        hidden=""
        id="page-header-expandable-panel-demo"
      >
        <div
          class="ecl-container"
        >
          <ul
            class="ecl-list-illustration ecl-list-illustration--icon-list ecl-page-header-expandable__list "
          >
            <li
              class="ecl-list-illustration__item"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The sponsor is controlled by [either (a) business name of the legal entity or (b) name and surname of the natural person])
                  </div>
                </div>
              </div>
            </li>
            <li
              class="ecl-list-illustration__item  ecl-list-illustration__item--is-last"
            >
              <div
                class="ecl-list-illustration__item-content"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--check-bold ecl-icon ecl-icon--l ecl-list-illustration__icon ecl-icon--check-bold"
                />
                <div
                  class="ecl-list-illustration__detail"
                >
                  <div
                    class="ecl-list-illustration__description"
                  >
                    (The advertisement is linked to [title and date of the election(s)] or [name of the legislative or regulatory initiative])
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ecl-container ecl-page-header__container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Parent Page label
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            Current Page Label
          </li>
        </ol>
      </nav>
      <h1
        class="ecl-page-header__title"
      >
        Consectetur adipiscing elit
      </h1>
      <div
        class="ecl-page-header__description-container"
      >
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, 
          <a
            class="ecl-link"
            href="/example"
          >
            eget dictum elit
          </a>
          . Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
      <ul
        class="ecl-page-header__meta"
      >
        <li
          class="ecl-page-header__meta-item"
        >
          News article
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          10 March 2025
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--location ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--location"
          />
          Brussels
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--clock ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--clock"
          />
          1 minute read
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          Research Center
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised With simple header - renders correctly 1`] = `
<jest>
  <div
    class="ecl-page-header ecl-page-header--image"
  >
    <div
      class="ecl-page-header-expandable ecl-page-header-no-toggle"
    >
      <div
        class="ecl-page-header-expandable__header"
        data-ecl-page-header-expandable-header=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-page-header-expandable__header-text"
            style="--ecl-page-header-expandable-separator: '–'"
          >
            <span
              class="ecl-page-header-expandable__title"
            >
              political advertisement
            </span>
            <span
              class="ecl-page-header-expandable__description"
            >
              The sponsor is Business Name
            </span>
            <span
              class="ecl-page-header-expandable__more"
            >
              More info:
            </span>
            <a
              class="ecl-link ecl-link--icon ecl-page-header-expandable__more-link"
              data-ecl-page-header-expandable-header-link=""
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                webpage link
              </span>
              <span
                aria-hidden="false"
                class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="ecl-picture ecl-page-header__picture-background"
    >
      <img
        alt="Europe flag"
        class="ecl-page-header__background"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
    </picture>
    <div
      class="ecl-container ecl-page-header__container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Parent Page label
            </a>
            <span
              aria-hidden="true"
              class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-breadcrumb__icon ecl-icon--corner-arrow"
              role="presentation"
            />
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            Current Page Label
          </li>
        </ol>
      </nav>
      <h1
        class="ecl-page-header__title"
      >
        Consectetur adipiscing elit
      </h1>
      <div
        class="ecl-page-header__description-container"
      >
        <picture
          class="ecl-picture ecl-page-header__picture-thumbnail"
        >
          <img
            alt="Europe flag"
            class="ecl-page-header__description-thumbnail"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
        </picture>
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, 
          <a
            class="ecl-link"
            href="/example"
          >
            eget dictum elit
          </a>
          . Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
      <ul
        class="ecl-page-header__meta"
      >
        <li
          class="ecl-page-header__meta-item"
        >
          News article
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          10 March 2025
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--location ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--location"
          />
          Brussels
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          <span
            aria-hidden="true"
            class="wt-icon--clock ecl-icon ecl-icon--2xs ecl-page-header__meta-icon ecl-icon--clock"
          />
          1 minute read
        </li>
        <li
          class="ecl-page-header__meta-item"
        >
          Research Center
        </li>
      </ul>
    </div>
  </div>
</jest>
`;
